snapshots/care/data4life/hc-util-sdk-kmp/error/1.13.0-SNAPSHOT/maven-metadata.xml.sha512
a348c0a10fe84821ca52f5f852ec822acfd11dd4a4434f23a5a8984ee4ad531b011e5435ab7c99a559b4a0d208d240de863b66694b9dec21936746c8bce72216